--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,22 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+
+index:
+    path: /accueil
+    controller: App\Controller\HomeController::accueil
+
+
+apropos:
+    path: /apropos
+#   controller: App\Controller\HomeController::apropos
+
+
+contacter:
+    path: /contacter
+    controller: App\Controller\HomeController::contacter
+
+
+
+
