--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -22,4 +22,5 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
-    
+    framework:
+        validation : { enabled : true }
