--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,6 +11,8 @@ security:
             entity:
                 class: App\Entity\User
                 property: username
+
+                
         # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
@@ -19,6 +21,13 @@ security:
         main:
             anonymous: lazy
             provider: app_user_provider
+            guard:
+                authenticators:
+                    - App\Security\AuthentificationAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
